[gd_scene load_steps=2 format=3 uid="uid://3s30xhs7xn4c"]

[ext_resource type="Script" path="res://Network/Network.gd" id="1_63yud"]

[node name="Network" type="Node2D"]
script = ExtResource("1_63yud")

[node name="MainMenuCanvas" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="MainMenuCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 194.0
offset_top = 76.0
offset_right = -156.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenuCanvas/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuCanvas/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Username" type="Label" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Username:
"

[node name="user" type="LineEdit" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "username"
caret_blink = true
caret_blink_interval = 0.5

[node name="address" type="LineEdit" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address (optional)"
caret_blink = true
caret_blink_interval = 0.5

[node name="Label" type="Label" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Choose:"

[node name="Join" type="Button" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="Host" type="Button" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host
"

[connection signal="pressed" from="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
